@@ -4,13 +4,13 @@
       "Helmut Wollmersdorfer, <helmut.wollmersdorfer@gmail.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.4, Dist::Zilla version 5.015, CPAN::Meta::Converter version 2.141170",
+   "generated_by" : "Dist::Zilla version 5.037, Dist::Milla version v1.0.15, CPAN::Meta::Converter version 2.150001",
    "license" : [
       "perl_5"
    ],
    "meta-spec" : {
       "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
+      "version" : 2
    },
    "name" : "Mojolicious-Plugin-ServerInfo",
    "no_index" : {
@@ -31,6 +31,7 @@
       },
       "develop" : {
          "requires" : {
+            "Dist::Milla" : "v1.0.15",
             "Test::Pod" : "1.41"
          }
       },
@@ -60,8 +61,8 @@
    },
    "version" : "0.009",
    "x_contributors" : [
-      "Helmut Wollmersdorfer <helmut.wollmersdorfer@fixpunkt.de>",
-      "Helmut Wollmersdorfer <helmut@wollmersdorfer.at>"
+      "Helmut Wollmersdorfer <helmut@wollmersdorfer.at>",
+      "Helmut Wollmersdorfer <helmut.wollmersdorfer@fixpunkt.de>"
    ]
 }
 
