@@ -3,7 +3,6 @@
 Mojolicious::Plugin::ServerInfo - display Server and Perl environment data
 
 <div>
-
     <a href="https://travis-ci.org/wollmers/Mojolicious-Plugin-ServerInfo"><img src="https://travis-ci.org/wollmers/Mojolicious-Plugin-ServerInfo.svg?branch=master" alt="Mojolicious-Plugin-ServerInfo"></a>
     <a href='https://coveralls.io/r/wollmers/Mojolicious-Plugin-ServerInfo'><img src='https://coveralls.io/repos/wollmers/Mojolicious-Plugin-ServerInfo/badge.svg' alt='Coverage Status' /></a>
     <a href='http://cpants.cpanauthors.org/dist/Mojolicious-Plugin-ServerInfo'><img src='http://cpants.cpanauthors.org/dist/Mojolicious-Plugin-ServerInfo.png' alt='Kwalitee Score' /></a>
@@ -22,7 +21,13 @@ It creates a route
 
     /serverinfo
 
-where detailed info is dispalyed in formatted HTML.
+where detailed info is displayed in formatted HTML.
+
+## METHODS
+
+- register
+
+    Do not use directly. It is called by Mojolicious.
 
 # SEE ALSO
 
@@ -37,7 +42,6 @@ where detailed info is dispalyed in formatted HTML.
 Helmut Wollmersdorfer, <helmut.wollmersdorfer@gmail.com>
 
 <div>
-
     <a href='http://cpants.cpanauthors.org/author/wollmers'><img src='http://cpants.cpanauthors.org/author/wollmers.png' alt='Kwalitee Score' /></a>
 </div>
 
