@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::ServerInfo.
 
 {{$NEXT}}
+       - improved author tests and doc
 
 0.009  2015-03-31 04:36:23 CEST
        - add author kwalitee badge
